[gd_scene load_steps=31 format=2]

[ext_resource path="res://Intro.tres" type="Theme" id=1]
[ext_resource path="res://Scenes/Level3.gd" type="Script" id=2]
[ext_resource path="res://ScrollContainer.gd" type="Script" id=3]
[ext_resource path="res://images/dialog.png" type="Texture" id=4]
[ext_resource path="res://images/dialog2.png" type="Texture" id=5]
[ext_resource path="res://Fonts/puzzletitle.tres" type="DynamicFont" id=6]
[ext_resource path="res://Fonts/Source_Code_Pro/SourceCodePro-Regular.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://itemlists/itemList_level3.gd" type="Script" id=8]
[ext_resource path="res://console_level3.gd" type="Script" id=9]
[ext_resource path="res://Buttons/string1_button.png" type="Texture" id=10]
[ext_resource path="res://Buttons/string1_button_pressed.png" type="Texture" id=11]
[ext_resource path="res://button scripts/string1.gd" type="Script" id=12]
[ext_resource path="res://Buttons/string2_button.png" type="Texture" id=13]
[ext_resource path="res://Buttons/string2_button_pressed.png" type="Texture" id=14]
[ext_resource path="res://button scripts/string2.gd" type="Script" id=15]
[ext_resource path="res://Buttons/string3_button.png" type="Texture" id=16]
[ext_resource path="res://Buttons/string3_button_pressed.png" type="Texture" id=17]
[ext_resource path="res://button scripts/string3.gd" type="Script" id=18]
[ext_resource path="res://Buttons/run_button.png" type="Texture" id=19]
[ext_resource path="res://Buttons/run_button_pressed.png" type="Texture" id=20]
[ext_resource path="res://button scripts/run_level3.gd" type="Script" id=21]
[ext_resource path="res://Scenes/PanelContainer.gd" type="Script" id=22]
[ext_resource path="res://images/popup.png" type="Texture" id=23]
[ext_resource path="res://popup.gd" type="Script" id=24]
[ext_resource path="res://Fonts/opensans16.tres" type="DynamicFont" id=25]
[ext_resource path="res://Buttons/home_button.png" type="Texture" id=26]
[ext_resource path="res://Buttons/home_button_pressed.png" type="Texture" id=27]
[ext_resource path="res://Next Level.gd" type="Script" id=28]

[sub_resource type="DynamicFont" id=1]
size = 15
font_data = ExtResource( 7 )

[sub_resource type="StyleBoxEmpty" id=2]

[node name="Level3" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="PanelContainer" type="PanelContainer" parent="."]
margin_right = 432.0
margin_bottom = 768.0
rect_min_size = Vector2( 432, 768 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ScrollContainer" type="ScrollContainer" parent="PanelContainer"]
margin_right = 432.0
margin_bottom = 768.0
rect_min_size = Vector2( 432, 768 )
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 3 )

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/ScrollContainer"]
margin_right = 432.0
margin_bottom = 1217.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 15
custom_constants/margin_top = 15
custom_constants/margin_left = 15
custom_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/ScrollContainer/MarginContainer"]
margin_left = 15.0
margin_top = 15.0
margin_right = 417.0
margin_bottom = 1202.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Title" type="Label" parent="PanelContainer/ScrollContainer/MarginContainer/VBoxContainer"]
margin_right = 402.0
margin_bottom = 59.0
custom_colors/font_color = Color( 0.690196, 0.215686, 0.431373, 1 )
custom_colors/font_color_shadow = Color( 0.2, 0.196078, 0.196078, 1 )
custom_constants/shadow_offset_x = 4
custom_constants/shadow_offset_y = 2
text = "Concatenation"
align = 1

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/ScrollContainer/MarginContainer/VBoxContainer"]
margin_top = 63.0
margin_right = 402.0
margin_bottom = 1187.0

[node name="Lesson" type="HBoxContainer" parent="PanelContainer/ScrollContainer/MarginContainer/VBoxContainer/VBoxContainer"]
margin_right = 402.0
margin_bottom = 636.0
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/ScrollContainer/MarginContainer/VBoxContainer/VBoxContainer/Lesson"]
margin_right = 402.0
margin_bottom = 636.0
size_flags_horizontal = 3

[node name="NinePatchRect" type="NinePatchRect" parent="PanelContainer/ScrollContainer/MarginContainer/VBoxContainer/VBoxContainer/Lesson/MarginContainer"]
margin_right = 402.0
margin_bottom = 636.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 4 )

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/ScrollContainer/MarginContainer/VBoxContainer/VBoxContainer/Lesson/MarginContainer"]
margin_right = 402.0
margin_bottom = 636.0

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/ScrollContainer/MarginContainer/VBoxContainer/VBoxContainer/Lesson/MarginContainer/VBoxContainer"]
margin_right = 402.0
margin_bottom = 423.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 16
custom_constants/margin_top = 23
custom_constants/margin_left = 16
custom_constants/margin_bottom = 0

[node name="RichTextLabel" type="RichTextLabel" parent="PanelContainer/ScrollContainer/MarginContainer/VBoxContainer/VBoxContainer/Lesson/MarginContainer/VBoxContainer/MarginContainer"]
margin_left = 16.0
margin_top = 23.0
margin_right = 386.0
margin_bottom = 423.0
rect_min_size = Vector2( 0, 400 )
size_flags_vertical = 0
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = true
bbcode_text = "Next we are going to learn about the concept of concatenation.

[font=res://Fonts/open_sans_26.tres][color=#ffffff]What is a Concatenation?[/color][/font]
Concatenation,  a term that describes combining a string, text, or other data in a series without any gaps. For example, the concatenation of \"snow\" and \"ball\" is \"snowball\". In programming languages, an operator is used to denote concatenation. For example, python, the operator \"+\" denotes concatenation, as it does in other programming languages.

Here is an example of using concatenation to create the word \"Snowball\":
"
text = "Next we are going to learn about the concept of concatenation.

What is a Concatenation?
Concatenation,  a term that describes combining a string, text, or other data in a series without any gaps. For example, the concatenation of \"snow\" and \"ball\" is \"snowball\". In programming languages, an operator is used to denote concatenation. For example, python, the operator \"+\" denotes concatenation, as it does in other programming languages.

Here is an example of using concatenation to create the word \"Snowball\":
"

[node name="MarginContainer2" type="MarginContainer" parent="PanelContainer/ScrollContainer/MarginContainer/VBoxContainer/VBoxContainer/Lesson/MarginContainer/VBoxContainer"]
margin_top = 427.0
margin_right = 402.0
margin_bottom = 556.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 16
custom_constants/margin_top = 0
custom_constants/margin_left = 16
custom_constants/margin_bottom = 9

[node name="variableExample" type="TextEdit" parent="PanelContainer/ScrollContainer/MarginContainer/VBoxContainer/VBoxContainer/Lesson/MarginContainer/VBoxContainer/MarginContainer2"]
margin_left = 16.0
margin_right = 386.0
margin_bottom = 120.0
rect_min_size = Vector2( 0, 120 )
text = "string1 = \"Snow\"
string2 = \"ball\"
string3 = string1 + string2
#string3 is now = to \"Snowball\""
readonly = true
syntax_highlighting = true
show_line_numbers = true

[node name="MarginContainer3" type="MarginContainer" parent="PanelContainer/ScrollContainer/MarginContainer/VBoxContainer/VBoxContainer/Lesson/MarginContainer/VBoxContainer"]
margin_top = 560.0
margin_right = 402.0
margin_bottom = 636.0
custom_constants/margin_right = 16
custom_constants/margin_left = 16
custom_constants/margin_bottom = 26

[node name="variableExample2" type="RichTextLabel" parent="PanelContainer/ScrollContainer/MarginContainer/VBoxContainer/VBoxContainer/Lesson/MarginContainer/VBoxContainer/MarginContainer3"]
margin_left = 16.0
margin_right = 386.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 50 )
text = "The next puzzle uses this concept, lets give it a go!"

[node name="solution" type="HBoxContainer" parent="PanelContainer/ScrollContainer/MarginContainer/VBoxContainer/VBoxContainer"]
margin_top = 640.0
margin_right = 402.0
margin_bottom = 1124.0

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/ScrollContainer/MarginContainer/VBoxContainer/VBoxContainer/solution"]
margin_right = 402.0
margin_bottom = 484.0
size_flags_horizontal = 3

[node name="NinePatchRect2" type="NinePatchRect" parent="PanelContainer/ScrollContainer/MarginContainer/VBoxContainer/VBoxContainer/solution/MarginContainer"]
margin_right = 402.0
margin_bottom = 484.0
rect_min_size = Vector2( 100, 100 )
size_flags_horizontal = 3
texture = ExtResource( 5 )

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/ScrollContainer/MarginContainer/VBoxContainer/VBoxContainer/solution/MarginContainer"]
margin_right = 402.0
margin_bottom = 484.0

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/ScrollContainer/MarginContainer/VBoxContainer/VBoxContainer/solution/MarginContainer/VBoxContainer"]
margin_right = 402.0
margin_bottom = 69.0
custom_constants/margin_right = 5
custom_constants/margin_top = 17
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5

[node name="Label" type="Label" parent="PanelContainer/ScrollContainer/MarginContainer/VBoxContainer/VBoxContainer/solution/MarginContainer/VBoxContainer/MarginContainer"]
margin_left = 138.0
margin_top = 17.0
margin_right = 263.0
margin_bottom = 64.0
size_flags_horizontal = 4
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color_shadow = Color( 0.14902, 0.0470588, 0.0941176, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 1
text = "Somehow"
align = 1

[node name="MarginContainer3" type="MarginContainer" parent="PanelContainer/ScrollContainer/MarginContainer/VBoxContainer/VBoxContainer/solution/MarginContainer/VBoxContainer"]
margin_top = 73.0
margin_right = 402.0
margin_bottom = 123.0
custom_constants/margin_right = 12
custom_constants/margin_top = 0
custom_constants/margin_left = 22
custom_constants/margin_bottom = 0

[node name="Label" type="RichTextLabel" parent="PanelContainer/ScrollContainer/MarginContainer/VBoxContainer/VBoxContainer/solution/MarginContainer/VBoxContainer/MarginContainer3"]
margin_left = 22.0
margin_right = 390.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 50 )
bbcode_enabled = true
bbcode_text = "Your challenge is to output \"Joe\" to the console using the [color=#b15cff]print[/color]() function and the variable, name."
text = "Your challenge is to output \"Joe\" to the console using the print() function and the variable, name."

[node name="MarginContainer2" type="MarginContainer" parent="PanelContainer/ScrollContainer/MarginContainer/VBoxContainer/VBoxContainer/solution/MarginContainer/VBoxContainer"]
margin_top = 127.0
margin_right = 402.0
margin_bottom = 146.0
custom_constants/margin_right = 22
custom_constants/margin_top = 5
custom_constants/margin_left = 22
custom_constants/margin_bottom = 5

[node name="myProblem" type="ItemList" parent="PanelContainer/ScrollContainer/MarginContainer/VBoxContainer/VBoxContainer/solution/MarginContainer/VBoxContainer/MarginContainer2"]
margin_left = 22.0
margin_top = 5.0
margin_right = 380.0
margin_bottom = 14.0
rect_min_size = Vector2( 0, 9 )
custom_fonts/font = SubResource( 1 )
auto_height = true
max_columns = 11
script = ExtResource( 8 )

[node name="MarginContainer5" type="MarginContainer" parent="PanelContainer/ScrollContainer/MarginContainer/VBoxContainer/VBoxContainer/solution/MarginContainer/VBoxContainer"]
margin_top = 150.0
margin_right = 402.0
margin_bottom = 300.0
custom_constants/margin_right = 22
custom_constants/margin_left = 22

[node name="TextEdit" type="TextEdit" parent="PanelContainer/ScrollContainer/MarginContainer/VBoxContainer/VBoxContainer/solution/MarginContainer/VBoxContainer/MarginContainer5"]
margin_left = 22.0
margin_right = 380.0
margin_bottom = 150.0
rect_min_size = Vector2( 0, 150 )
text = " Console:"
readonly = true
script = ExtResource( 9 )

[node name="MarginContainer4" type="MarginContainer" parent="PanelContainer/ScrollContainer/MarginContainer/VBoxContainer/VBoxContainer/solution/MarginContainer/VBoxContainer"]
margin_top = 304.0
margin_right = 402.0
margin_bottom = 484.0
custom_constants/margin_right = 12
custom_constants/margin_left = 21
custom_constants/margin_bottom = 22

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/ScrollContainer/MarginContainer/VBoxContainer/VBoxContainer/solution/MarginContainer/VBoxContainer/MarginContainer4"]
margin_left = 21.0
margin_right = 390.0
margin_bottom = 158.0

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/ScrollContainer/MarginContainer/VBoxContainer/VBoxContainer/solution/MarginContainer/VBoxContainer/MarginContainer4/HBoxContainer"]
margin_right = 175.0
margin_bottom = 158.0

[node name="string1" type="TextureButton" parent="PanelContainer/ScrollContainer/MarginContainer/VBoxContainer/VBoxContainer/solution/MarginContainer/VBoxContainer/MarginContainer4/HBoxContainer/VBoxContainer"]
margin_right = 175.0
margin_bottom = 50.0
rect_min_size = Vector2( 175, 50 )
texture_normal = ExtResource( 10 )
texture_pressed = ExtResource( 11 )
expand = true
stretch_mode = 4
script = ExtResource( 12 )

[node name="string2" type="TextureButton" parent="PanelContainer/ScrollContainer/MarginContainer/VBoxContainer/VBoxContainer/solution/MarginContainer/VBoxContainer/MarginContainer4/HBoxContainer/VBoxContainer"]
margin_top = 54.0
margin_right = 175.0
margin_bottom = 104.0
rect_min_size = Vector2( 175, 50 )
texture_normal = ExtResource( 13 )
texture_pressed = ExtResource( 14 )
expand = true
stretch_mode = 4
script = ExtResource( 15 )

[node name="string3" type="TextureButton" parent="PanelContainer/ScrollContainer/MarginContainer/VBoxContainer/VBoxContainer/solution/MarginContainer/VBoxContainer/MarginContainer4/HBoxContainer/VBoxContainer"]
margin_top = 108.0
margin_right = 175.0
margin_bottom = 158.0
rect_min_size = Vector2( 175, 50 )
texture_normal = ExtResource( 16 )
texture_pressed = ExtResource( 17 )
expand = true
stretch_mode = 4
script = ExtResource( 18 )

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/ScrollContainer/MarginContainer/VBoxContainer/VBoxContainer/solution/MarginContainer/VBoxContainer/MarginContainer4/HBoxContainer"]
margin_left = 179.0
margin_right = 358.0
margin_bottom = 158.0
custom_constants/margin_left = 4

[node name="VBoxContainer2" type="VBoxContainer" parent="PanelContainer/ScrollContainer/MarginContainer/VBoxContainer/VBoxContainer/solution/MarginContainer/VBoxContainer/MarginContainer4/HBoxContainer/MarginContainer"]
margin_left = 4.0
margin_right = 179.0
margin_bottom = 158.0
size_flags_horizontal = 3

[node name="run_level3" type="TextureButton" parent="PanelContainer/ScrollContainer/MarginContainer/VBoxContainer/VBoxContainer/solution/MarginContainer/VBoxContainer/MarginContainer4/HBoxContainer/MarginContainer/VBoxContainer2"]
margin_right = 175.0
margin_bottom = 50.0
rect_min_size = Vector2( 175, 50 )
texture_normal = ExtResource( 19 )
texture_pressed = ExtResource( 20 )
expand = true
stretch_mode = 4
script = ExtResource( 21 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="PanelContainer2" type="PanelContainer" parent="CanvasLayer"]
visible = false
margin_left = -1.0
margin_top = -1.0
margin_right = 433.0
margin_bottom = 769.0
rect_min_size = Vector2( 432, 768 )
custom_styles/panel = SubResource( 2 )
script = ExtResource( 22 )

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer/PanelContainer2"]
modulate = Color( 0, 0, 0, 0.596078 )
margin_right = 434.0
margin_bottom = 770.0
rect_min_size = Vector2( 434, 770 )
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 22 )

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/PanelContainer2"]
margin_right = 434.0
margin_bottom = 770.0

[node name="NinePatchRect" type="NinePatchRect" parent="CanvasLayer/PanelContainer2/VBoxContainer"]
margin_left = 67.0
margin_top = 285.0
margin_right = 367.0
margin_bottom = 485.0
rect_min_size = Vector2( 300, 200 )
size_flags_horizontal = 4
size_flags_vertical = 6
texture = ExtResource( 23 )
axis_stretch_horizontal = 2
axis_stretch_vertical = 2
script = ExtResource( 24 )

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/PanelContainer2/VBoxContainer/NinePatchRect"]
margin_right = 298.0
margin_bottom = 200.0

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/PanelContainer2/VBoxContainer/NinePatchRect/VBoxContainer"]
margin_right = 307.0
margin_bottom = 200.0
size_flags_vertical = 3
custom_constants/margin_right = 16
custom_constants/margin_top = 8
custom_constants/margin_left = 16
custom_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/PanelContainer2/VBoxContainer/NinePatchRect/VBoxContainer/MarginContainer"]
margin_left = 16.0
margin_top = 8.0
margin_right = 291.0
margin_bottom = 192.0

[node name="Label" type="Label" parent="CanvasLayer/PanelContainer2/VBoxContainer/NinePatchRect/VBoxContainer/MarginContainer/VBoxContainer"]
margin_left = 107.0
margin_right = 168.0
margin_bottom = 23.0
size_flags_horizontal = 4
size_flags_vertical = 2
custom_fonts/font = ExtResource( 25 )
custom_colors/font_color = Color( 0.247059, 0.835294, 0.407843, 1 )
custom_colors/font_color_shadow = Color( 0.121569, 0.431373, 0.203922, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 1
text = "Correct!"

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer/PanelContainer2/VBoxContainer/NinePatchRect/VBoxContainer/MarginContainer/VBoxContainer"]
margin_left = 37.0
margin_top = 35.0
margin_right = 237.0
margin_bottom = 135.0
rect_min_size = Vector2( 200, 100 )
size_flags_horizontal = 4
size_flags_vertical = 4
custom_fonts/normal_font = ExtResource( 25 )
bbcode_enabled = true
bbcode_text = "[center]You have completed[/center] [center]the prototype for[/center] [center]PyBuddy, Thank you[/center] [center]for playing![/center]"
text = "You have completed the prototype for PyBuddy, Thank you for playing!"

[node name="Next Level" type="TextureButton" parent="CanvasLayer/PanelContainer2/VBoxContainer/NinePatchRect/VBoxContainer/MarginContainer/VBoxContainer"]
margin_left = 62.0
margin_top = 139.0
margin_right = 212.0
margin_bottom = 184.0
rect_min_size = Vector2( 150, 45 )
size_flags_horizontal = 4
size_flags_vertical = 12
texture_normal = ExtResource( 26 )
texture_pressed = ExtResource( 27 )
expand = true
stretch_mode = 4
script = ExtResource( 28 )
[connection signal="correct" from="PanelContainer/ScrollContainer/MarginContainer/VBoxContainer/VBoxContainer/solution/MarginContainer/VBoxContainer/MarginContainer4/HBoxContainer/MarginContainer/VBoxContainer2/run_level3" to="PanelContainer/ScrollContainer/MarginContainer/VBoxContainer/VBoxContainer/solution/MarginContainer/VBoxContainer/MarginContainer5/TextEdit" method="_on_run_level3_correct"]
[connection signal="correct" from="PanelContainer/ScrollContainer/MarginContainer/VBoxContainer/VBoxContainer/solution/MarginContainer/VBoxContainer/MarginContainer4/HBoxContainer/MarginContainer/VBoxContainer2/run_level3" to="CanvasLayer/PanelContainer2" method="_on_run_level3_correct"]
[connection signal="correct" from="PanelContainer/ScrollContainer/MarginContainer/VBoxContainer/VBoxContainer/solution/MarginContainer/VBoxContainer/MarginContainer4/HBoxContainer/MarginContainer/VBoxContainer2/run_level3" to="CanvasLayer/PanelContainer2/VBoxContainer/NinePatchRect/VBoxContainer/MarginContainer/VBoxContainer/Next Level" method="_on_run_level3_correct"]
[connection signal="wrong" from="PanelContainer/ScrollContainer/MarginContainer/VBoxContainer/VBoxContainer/solution/MarginContainer/VBoxContainer/MarginContainer4/HBoxContainer/MarginContainer/VBoxContainer2/run_level3" to="PanelContainer/ScrollContainer/MarginContainer/VBoxContainer/VBoxContainer/solution/MarginContainer/VBoxContainer/MarginContainer5/TextEdit" method="_on_run_level3_wrong"]
